--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,10 +1,10 @@
 <div class="product">
   <div class="product-details">
-    <img [src]="getImageUrl(product)" [alt]="product?.name"/>
+    <img [src]="getImageUrl(product)" [alt]="product.name"/>
     <div class="product-info">
-      <div class="name red">{{ product?.name }}</div>
-      <div class="description">{{ product?.description }}</div>
-      <div class="category">Part Type: {{ product?.category }}</div>
+      <div class="name red">{{ product.name }}</div>
+      <div class="description">{{ product.description }}</div>
+      <div class="category">Part Type: {{ product.category }}</div>
     </div>
   </div>
   <div class="price">
@@ -12,7 +12,7 @@
       style="font-weight: bolder"
       [ngStyle]="{ color: isProductDiscounted(product) ? '#16db65' : '' }"
       [ngClass]="getPriceDiscountedClasses(product)">
-      {{ product?.price | currency:'EUR' }}</div>
+      {{ product.price | currency:'EUR' }}</div>
     <div class="discount" *ngIf="isProductDiscounted(product)">
       {{ getProductPriceWithDiscount(product) | currency:'EUR' }}
     </div>
