PS10 - Angular Forms

--- a/src/app/catalog/catalog.component.html
+++ b/src/app/catalog/catalog.component.html
@@ -2,8 +2,7 @@
   <div class="filters">
     <a
       class="button"
-      [class.active]="selectedCategory === null"
-      [class.bold]="selectedCategory === null"
+      routerLinkActive="active"
       routerLink="/catalog">
       All
     </a>
@@ -12,7 +11,9 @@
        [class.active]="selectedCategory === category"
        routerLink="/catalog"
        [queryParams]="{filter: category}"
-      >
+       routerLinkActive="active"
+       [routerLinkActiveOptions]="{ exact: true }"
+    >
       {{category}}
     </a>
   </div>
